--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,11 @@ project(OpenAI
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
+
+include(GNUInstallDirs)
+include(CMakePackageConfigHelpers)
+include(cmake/utils.cmake)
 
 if(WIN32)
     set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
@@ -14,30 +19,11 @@ endif()
 
 string(COMPARE EQUAL "${CMAKE_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}" is_top_level)
 
-macro(set_if_undefined variable)
-    if(NOT DEFINED "${variable}")
-        set("${variable}" ${ARGN})
-    endif()
-endmacro()
-
-option(OpenAI_SHARED_LIBS "Build libs as shared" OFF)
-
+option(BUILD_SHARED_LIBS "Build libs as shared" ON)
 option(OpenAI_INSTALL "Generate target for installing ApiOpenAI" ${is_top_level})
 set_if_undefined(OpenAI_INSTALL_CMAKEDIR
-        "${CMAKE_INSTALL_LIBDIR}/cmake/openai" CACHE STRING
+        "${CMAKE_INSTALL_LIBDIR}/openai" CACHE STRING
         "Install path for ApiOpenAI package-related CMake files")
-
-if(DEFINED OpenAI_SHARED_LIBS)
-    set(BUILD_SHARED_LIBS ${OpenAI_SHARED_LIBS})
-endif()
-
-if(NOT DEFINED CMAKE_BUILD_TYPE AND NOT DEFINED CMAKE_CONFIGURATION_TYPES)
-    set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type" FORCE)
-    set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
-endif()
-
-add_library(OpenAI)
-add_library(OpenAI::OpenAI ALIAS OpenAI)
 
 set(OpenAI_INCLUDES
         include/OpenAI/HttpContext.h
@@ -72,60 +58,47 @@ set(OpenAI_SOURCE
         src/OpenAI/Dalle.cpp
         src/OpenAI/Speaker.cpp)
 
-source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES
-        ${OpenAI_INCLUDES}
-        ${OpenAI_SOURCE})
+add_library(OpenAI ${OpenAI_INCLUDES} ${OpenAI_SOURCE})
+add_library(OpenAI::OpenAI ALIAS OpenAI)
 
-target_sources(OpenAI PRIVATE ${OpenAI_INCLUDES} ${OpenAI_SOURCE})
+set_public_include_directories(OpenAI)
+set_targets_version(OpenAI)
 
 find_package(Boost REQUIRED)
 find_package(OpenSSL REQUIRED)
 find_package(ExtendedCpp REQUIRED)
 
-target_include_directories(OpenAI PUBLIC
-        ${OPENSSL_INCLUDE_DIR} ${Boost_INCLUDE_DIRS}
-        "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
-        "$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/include>"
-        PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src/OpenAI")
-
-set_target_properties(OpenAI PROPERTIES
-        SOVERSION ${PROJECT_VERSION_MAJOR}
-        VERSION ${PROJECT_VERSION})
-
-target_link_libraries(OpenAI PRIVATE ExtendedCpp::Json ExtendedCpp::Common ${OPENSSL_LIBRARIES} ${Boost_LIBRARIES})
+target_link_libraries(OpenAI PRIVATE
+        ExtendedCpp::Json
+        ExtendedCpp::Common
+        ${OPENSSL_LIBRARIES}
+        ${Boost_LIBRARIES})
 
 if(MINGW)
     target_link_libraries(OpenAI PRIVATE ws2_32)
 endif()
 
 if(OpenAI_INSTALL AND NOT CMAKE_SKIP_INSTALL_RULES)
-    include(CMakePackageConfigHelpers)
     configure_package_config_file(cmake/openai-config.cmake.in openai-config.cmake
             INSTALL_DESTINATION "${OpenAI_INSTALL_CMAKEDIR}")
-    write_basic_package_version_file(openai-config-version.cmake
+
+    write_basic_package_version_file(
+            "${CMAKE_CURRENT_BINARY_DIR}/openai-config-version.cmake"
+            VERSION ${PROJECT_VERSION}
             COMPATIBILITY SameMajorVersion)
 
     install(DIRECTORY include/
-            TYPE INCLUDE
-            COMPONENT OpenAI)
-
-    set(targets_file "openai-shared-targets.cmake")
-    if(NOT BUILD_SHARED_LIBS)
-        set(targets_file "openai-static-targets.cmake")
-    endif()
+            TYPE INCLUDE)
 
     install(EXPORT OpenAI_export
-            COMPONENT "${PROJECT_NAME}"
-            FILE "${targets_file}"
-            DESTINATION ${OpenAI_INSTALL_CMAKEDIR}
-            NAMESPACE ${PROJECT_NAME}::)
+            NAMESPACE OpenAI::
+            FILE "openai-targets.cmake"
+            DESTINATION ${OpenAI_INSTALL_CMAKEDIR})
 
     install(FILES
             "${CMAKE_CURRENT_BINARY_DIR}/openai-config.cmake"
             "${CMAKE_CURRENT_BINARY_DIR}/openai-config-version.cmake"
-            COMPONENT OpenAI
-            DESTINATION "${OpenAI_INSTALL_CMAKEDIR}")
+            DESTINATION ${OpenAI_INSTALL_CMAKEDIR})
 
-    include(cmake/utils.cmake)
     install_projects(OpenAI)
 endif()
